--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 157.245.108.94;
-allow 158.174.210.51;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -266,6 +265,7 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.126.114.110;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -280,7 +280,6 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
-allow 185.132.53.150;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -558,8 +557,6 @@ allow 193.26.115.140;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.26.115.82;
-allow 193.32.162.104;
-allow 193.32.162.96;
 allow 193.36.132.21;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -878,7 +875,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -905,9 +901,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.7;
@@ -956,7 +952,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1217,11 +1212,11 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -1711,7 +1706,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1719,6 +1713,7 @@ allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.118.151;
 allow 5.255.118.218;
 allow 5.255.123.158;
 allow 5.255.123.164;
@@ -1783,12 +1778,9 @@ allow 80.253.251.56;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
-allow 80.94.92.106;
-allow 80.94.92.135;
-allow 80.94.92.92;
-allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.184.57.122;
 allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.241;
@@ -1858,7 +1850,6 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
-allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
