--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -409,6 +409,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:115:df08::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
@@ -432,6 +433,7 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1:108::b829:eee2;
+allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -731,7 +733,6 @@ allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
 allow 2a12:a800:2:1:45:80:158:27;
-allow 2a12:a800:2:1:45:80:158:53;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
 allow 2a12:a800:8:1:45:94:31:68;
