--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -280,6 +280,7 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
@@ -557,6 +558,8 @@ set_real_ip_from 193.26.115.140;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.26.115.82;
+set_real_ip_from 193.32.162.104;
+set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -590,7 +593,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.84.71;
-set_real_ip_from 198.167.206.196;
+set_real_ip_from 198.167.206.229;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -901,7 +904,6 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.4;
@@ -1215,6 +1217,7 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
+set_real_ip_from 2a04:52c0:115:df08::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1238,6 +1241,7 @@ set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:1:108::b829:eee2;
+set_real_ip_from 2a06:1700:1:109::209:a94;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1537,7 +1541,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
-set_real_ip_from 2a12:a800:2:1:45:80:158:53;
 set_real_ip_from 2a12:a800:2:1:45:80:158:75;
 set_real_ip_from 2a12:a800:2:1:45:80:158:93;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
@@ -1573,6 +1576,7 @@ set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
 set_real_ip_from 37.228.129.128;
+set_real_ip_from 37.228.129.162;
 set_real_ip_from 37.228.129.168;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
@@ -1652,7 +1656,6 @@ set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.167;
 set_real_ip_from 45.80.158.27;
-set_real_ip_from 45.80.158.53;
 set_real_ip_from 45.80.158.75;
 set_real_ip_from 45.80.158.93;
 set_real_ip_from 45.83.104.137;
@@ -1710,6 +1713,7 @@ set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
+set_real_ip_from 5.255.110.120;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
@@ -1778,9 +1782,13 @@ set_real_ip_from 80.253.251.56;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
+set_real_ip_from 80.94.92.106;
+set_real_ip_from 80.94.92.135;
+set_real_ip_from 80.94.92.92;
+set_real_ip_from 80.94.92.99;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.184.57.122;
+set_real_ip_from 82.117.255.113;
 set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
@@ -1850,6 +1858,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.109.44;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.94.51.243;
+set_real_ip_from 93.94.52.229;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.231.118;
