--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,6 +157,7 @@ allow 162.220.14.54;
 allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
+allow 164.132.172.209;
 allow 164.132.58.8;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -198,7 +199,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.140.210;
@@ -479,6 +479,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.67.82.114;
 allow 185.82.219.109;
+allow 188.165.200.97;
 allow 188.239.191.25;
 allow 188.68.36.28;
 allow 188.68.41.191;
@@ -555,12 +556,15 @@ allow 193.26.115.140;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.26.115.82;
+allow 193.32.162.104;
+allow 193.32.162.96;
 allow 193.36.132.21;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.163.157.49;
+allow 194.26.192.152;
 allow 194.26.192.177;
 allow 194.26.192.77;
 allow 194.53.137.102;
@@ -588,7 +592,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.229;
+allow 198.167.206.202;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -618,6 +622,8 @@ allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
+allow 2001:41d0:1008:20d1::1;
+allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
@@ -901,9 +907,7 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1160,7 +1164,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1452,6 +1455,7 @@ allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
@@ -1461,6 +1465,7 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1490,6 +1495,7 @@ allow 2a12:a800:11:1:124:198:132:237;
 allow 2a12:a800:11:1:124:198:132:52;
 allow 2a12:a800:11:1:192:159:99:168;
 allow 2a12:a800:11:1:192:159:99:74;
+allow 2a12:a800:1:1:194:26:192:152;
 allow 2a12:a800:1:1:194:26:192:177;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1682,6 +1688,7 @@ allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
+allow 45.95.169.110;
 allow 45.95.169.18;
 allow 45.95.169.252;
 allow 46.165.243.36;
@@ -1754,6 +1761,7 @@ allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
+allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
 allow 67.219.109.141;
@@ -1777,6 +1785,10 @@ allow 80.253.251.56;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
+allow 80.94.92.106;
+allow 80.94.92.135;
+allow 80.94.92.92;
+allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.117.255.113;
@@ -1850,6 +1862,7 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
+allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.231.118;
