--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -5,6 +5,8 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
+allow 2001:41d0:1008:20d1::1;
+allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
@@ -352,7 +354,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -644,6 +645,7 @@ allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
@@ -653,6 +655,7 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
+allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -682,6 +685,7 @@ allow 2a12:a800:11:1:124:198:132:237;
 allow 2a12:a800:11:1:124:198:132:52;
 allow 2a12:a800:11:1:192:159:99:168;
 allow 2a12:a800:11:1:192:159:99:74;
+allow 2a12:a800:1:1:194:26:192:152;
 allow 2a12:a800:1:1:194:26:192:177;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
