--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,6 +134,7 @@ allow 144.126.133.74;
 allow 146.103.43.17;
 allow 146.59.126.232;
 allow 146.59.231.4;
+allow 148.113.152.91;
 allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -591,6 +592,7 @@ allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
+allow 196.251.69.116;
 allow 196.251.84.71;
 allow 198.167.206.202;
 allow 198.251.84.163;
@@ -879,6 +881,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -906,12 +909,10 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -957,6 +958,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1038,6 +1040,7 @@ allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
 allow 2605:e440:3::3ef;
 allow 2607:5300:201:3100::35c5;
+allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
