--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -82,7 +82,6 @@ set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.237.27.11;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -610,6 +609,7 @@ set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
+set_real_ip_from 199.26.150.137;
 set_real_ip_from 2001:0:d911:c0d9:4:b244:a41c:8d66;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
@@ -874,7 +874,6 @@ set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.113;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -902,9 +901,9 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -950,7 +949,6 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1212,6 +1210,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1448,6 +1447,7 @@ set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
+set_real_ip_from 2a0e:bfc7::216:3cff:fe6f:c4ca;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:16a4::1;
@@ -1676,6 +1676,7 @@ set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.156.161;
+set_real_ip_from 45.9.156.22;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
@@ -1704,6 +1705,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
